// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: full 1`] = `
<div
  className="page page-limited"
>
  <Suggestions
    suggestions="quality_profiles"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="quality_profiles.page"
  />
  <Outlet
    context={
      {
        "actions": {},
        "exporters": [],
        "languages": [],
        "profiles": [],
        "updateProfiles": [Function],
      }
    }
  />
</div>
`;

exports[`should render correctly: loading 1`] = `
<div
  className="page page-limited"
>
  <Suggestions
    suggestions="quality_profiles"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="quality_profiles.page"
  />
  <i
    className="spinner"
  />
</div>
`;
